# nem

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.Dockerfile  build.sh  flake.nix
.cargo/: config
cli/: Cargo.toml
cli/src/: main.rs
electron_gui/: .gitignore  Cargo.toml  package.json
electron_gui/browser/: hover.html  index.html  main.js
electron_gui/node/: main.js
electron_gui/src/: lib.rs
fixity/: Cargo.toml
fixity/src/: lib.rs
gui/: Cargo.toml
gui/src/: lib.rs
gui/src/components/: root.rs
gui/src/screens/: index.rs
gui_desktop_hotkeys/: Cargo.toml
gui_dom/: Cargo.toml  Trunk.toml  design.html  index.html  package-lock.json  package.json  tailwind.config.js
gui_dom/src/: lib.rs  main.rs
gui_electron/: Cargo.toml  package.json
gui_electron/src/: lib.rs
gui_native/: Cargo.toml
gui_native/src/: application.rs  lib.rs  window.rs
gui_native/src/subscriptions/: global_hotkey.rs  mod.rs
gui_native/src/window/integration/: mod.rs
gui_pwa/: Cargo.toml
gui_pwa/src/: lib.rs
infopub/: Cargo.toml
legacy_gui_dom/: Cargo.toml
legacy_server/: Cargo.toml
legacy_server/src/: config.rs  lib.rs  routes.rs
legacy_server/src/catchers/: acme_not_found.rs
legacy_server/src/handlers/: assets.rs
make/: Cargo.toml
make/src/: electron.rs  main.rs
mnemosyne/: Cargo.toml
moxie-test/: Cargo.toml  woz.toml
nem/: Cargo.toml
nem/src/: lib.rs
pwa/: Cargo.toml  index.html  manifest.json  sw.js
pwa/src/: lib.rs
pwa_build/: Cargo.toml
server/: Cargo.toml  build.rs
server/public/: style.css
server/src/: acme.rs  catchers.rs  config.rs  error.rs  handlers.rs  lib.rs  routes.rs  server.rs
server/src/acme/: http_validate.rs  mod.rs
server/src/catchers/: acme_not_found.rs
server/src/handlers/: acme_challenge.rs  assets.rs  mod.rs
server/src/states/: mod.rs  template.rs
web/: Cargo.toml
web/src/: error.rs  foo.rs  main.rs
web/src/state/: template.rs
web/templates/: index.hbs
