[package]
name = "infopub"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_contrib = "0.4.2"
rocket = "0.4.2"
serde = "1.0.99"
diesel = "1.4.2"
