[package]
name = "mnemosyne-cli"
version = "0.0.1"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[[bin]]
name = "nem"
path = "src/main.rs"

[features]
default = ["db", "api"]
api = ["mnemosyne/api"]
db = ["mnemosyne/db", "mnemosyne/sqlite"]

[dependencies]
mnemosyne = { path = "../mnemosyne" }
