[package]
name = "nem_cli"
version = "0.0.1"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[[bin]]
name = "nem"
path = "src/main.rs"

[features]
default = ["server"]
server = []

[dependencies]
# Feature deps
nem_server = { path = "../server", optional = true }
# Standard deps
structopt = "0.3"
tokio = { version = "1.13", features = ["rt"] }
