[package]
name = "electron-gui"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
mnemosyne-gui = { path = "../gui" }
moxie = { git = "https://github.com/anp/moxie" }
moxie-dom = { git = "https://github.com/anp/moxie" }
wasm-bindgen = "0.2"
console_log = "0.1"
log = "0.4"
