[package]
name = "mnemosyne-gui"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.moxie]
git = "https://github.com/anp/moxie"
version = "0.1.1-alpha.1-pre"

[dependencies.moxie-dom]
git = "https://github.com/anp/moxie"
version = "0.1.1-alpha.1-pre"
default-features = false
features = ["rsdom"]
