[package]
name = "mnemosyne-gui"
version = "0.0.1"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[lib]
name = "mnemosyne_gui"
path = "src/lib.rs"

[dependencies]

[dependencies.moxie]
git = "https://github.com/anp/moxie"
version = "0.1.1-alpha.1-pre"

[dependencies.moxie-dom]
git = "https://github.com/anp/moxie"
version = "0.1.1-alpha.1-pre"
default-features = false
features = ["rsdom"]
