[package]
name = "nem_gui_dom"
version = "0.1.0"
edition = "2021"

[lib]
name = "nem_gui_dom"
path = "src/lib.rs"

[[bin]]
name = "nem-gui-http"
path = "src/bin/http_ui.rs"

[[bin]]
name = "nem-gui-design"
path = "src/bin/ui_design.rs"

[dependencies]
sycamore = "0.7"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Node", "Text"] }
wasm-bindgen = "0.2"
