[package]
name = "nem_gui_dom"
version = "0.1.0"
edition = "2021"

[lib]
name = "nem_gui_dom"
path = "src/lib.rs"

[[bin]]
name = "nem-gui-http"
path = "src/bin/http_ui.rs"

[dependencies]
sycamore = "0.7"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Node", "Text", "EventTarget", "HtmlDivElement"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
reqwasm = "0.4"
serde_json = "1.0.75"
console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"
