[package]
name = "nem-native"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[lib]
name = "mnemosyne_desktop"
path = "src/lib.rs"

[[bin]]
name = "nem-desktop"
path = "src/bin/nem_desktop.rs"

[[bin]]
name = "nem-desktop-deviceinputs"
path = "src/bin/nem_desktop_deviceinputs.rs"

[dependencies]
log = "0.4"
env_logger = "0.7"
# using the repo directly, as the integration example required some features that wasn't
# available on the published crate
iced = { git = "https://github.com/hecrj/iced" }
iced_winit = { git = "https://github.com/hecrj/iced" }
iced_native = { git = "https://github.com/hecrj/iced" }
iced_wgpu = { git = "https://github.com/hecrj/iced" }
iced_futures = { git = "https://github.com/hecrj/iced", features = ["async-std"] }
winit = "0.22"
async-std = { version = "1.0", features = ["unstable"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20"
core-foundation = "0.7"
core-graphics = "0.19"
dispatch = "0.2"
objc = "0.2"
rdev = { version = "0.4", features = ["unstable_grab"] }
