[package]
publish = false
name = "mnemosyne-make"
description = "a build helper for nem crates"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[[bin]]
name = "make"
path = "src/main.rs"

[dependencies]
wasm-pack = "0.8"
# wasm-pack is making me choose 0.2 :(
structopt = "0.2"
log = "0.4"
