[package]
publish = false
name = "mnemosyne-make"
description = "a build helper for nem crates"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[[bin]]
name = "make"
path = "src/main.rs"

[dependencies]
wasm-pack = "0.8"
structopt = "0.3"
structopt_wasm_pack = { version = "0.2", package = "structopt" }
log = "0.4"
