[package]
name = "mnemosyne"
version = "0.0.1"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[lib]
name = "mnemosyne"
path = "src/lib.rs"

[features]
api = ["serde"]
db = []
sqlite = ["diesel/sqlite"]

[dependencies]
serde = { version = "1.0.99", optional = true }
diesel = { version = "1.4.2", optional = true }
