[package]
name = "nem-server"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[lib]
name = "nem_server"
path = "src/lib.rs"

[[bin]]
name = "nem-server"
path = "src/bin/nem_server.rs"

[features]
default = ["mnemosyne/db", "mnemosyne/sqlite", "hosted"]
hosted = []
templates-reload = []

[dependencies]
mnemosyne = { path = "../mnemosyne" }
mnemosyne-gui = { path = "../gui" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
handlebars = "2.0.2"
serde = { version = "1.0.101", features = ["derive"] }
structopt = "0.3.3"
acme-lib = { version = "0.5.2", optional = true }
