[package]
name = "mnemosyne_web"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"



[features]
default = ["mnemosyne/db", "mnemosyne/sqlite"]

[dependencies]
mnemosyne = { path = "../mnemosyne" }
mnemosyne_gui = { path = "../gui" }
rocket_contrib = "0.4.2"
rocket = "0.4.2"
