[package]
name = "mnemosyne-web"
version = "0.1.0"
authors = ["Lee Olayvar <leeola@fastmail.com>"]
edition = "2018"

[features]
default = ["mnemosyne/db", "mnemosyne/sqlite"]

[dependencies]
mnemosyne = { path = "../mnemosyne" }
mnemosyne-gui = { path = "../gui" }
rocket_contrib = "0.4.2"
rocket = "0.4.2"

[dependencies.moxie]
git = "https://github.com/anp/moxie"
version = "0.1.1-alpha.1-pre"

[dependencies.moxie-dom]
git = "https://github.com/anp/moxie"
version = "0.1.1-alpha.1-pre"
default-features = false
features = ["rsdom"]
